Products Page and Add to cart

--- a/MyUserAPP/app/src/main/AndroidManifest.xml
+++ b/MyUserAPP/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.myuserapplication">
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -18,8 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.myuserapplication.UserInterface.Authorization"
-            />
+        <activity android:name="com.example.myuserapplication.UserInterface.UI.Authorization" />
+        <activity android:name=".UserInterface.UI.Shopping"/>
     </application>
 
 </manifest>
